added auth config for swagger
